fix: prevent layout shift when scroll is locked
Add margin-right: 0px to body when scroll is locked to prevent layout shift

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -264,7 +264,9 @@
   scrollbar-width: none;
   /* Firefox */
 }
-
+html body[data-scroll-locked] {
+  margin-right: 0px !important;
+}
 /* Chore */
 .fade-in {
   animation: fadeIn 0.3s ease-out;
